--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
                         <div class="chart-wrapper">
                             <canvas id="chart-pre"></canvas>
                         </div>
+                        <div class="metrics-summary-grid" id="metrics-pre">
+                            <div class="summary-metric">
+                                <span class="metric-label">Total Keywords</span>
+                                <span class="metric-value" id="val-total-pre">-</span>
+                            </div>
+                            <div class="summary-metric">
+                                <span class="metric-label">Keywords ≥ 10 Clicks</span>
+                                <span class="metric-value" id="val-gte10-pre">-</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="chart-container card">
                         <div class="chart-container-header">
@@ -140,6 +150,16 @@
                         </div>
                         <div class="chart-wrapper">
                             <canvas id="chart-post"></canvas>
+                        </div>
+                        <div class="metrics-summary-grid" id="metrics-post">
+                            <div class="summary-metric">
+                                <span class="metric-label">Total Keywords</span>
+                                <span class="metric-value" id="val-total-post">-</span>
+                            </div>
+                            <div class="summary-metric">
+                                <span class="metric-label">Keywords ≥ 10 Clicks</span>
+                                <span class="metric-value" id="val-gte10-post">-</span>
+                            </div>
                         </div>
                     </div>
                 </div>
