feat: Add metric summary display for total keywords and keywords with 10+ clicks to pre and post sections, including new grid and metric styling.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                                 <p>Arrastra tu CSV <span>Pre AI Overviews</span></p>
                                 <input type="file" id="file-input-pre" accept=".csv" hidden>
                             </div>
-                            <p class="dropzone-hint">Solo archivos .csv</p>
+                            <p class="dropzone-hint">Solo archivos .csv El archivo CSV debe contener las columnas
+                                "Query", "Position", "CTR", "Clicks" e "Impressions".</p>
                             <div class="dropzone-loaded-indicator hidden">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2">
@@ -98,7 +99,8 @@
                                 <p>Arrastra tu CSV <span>Post AI Overviews</span></p>
                                 <input type="file" id="file-input-post" accept=".csv" hidden>
                             </div>
-                            <p class="dropzone-hint">Solo archivos .csv</p>
+                            <p class="dropzone-hint">Solo archivos .csv El archivo CSV debe contener las columnas
+                                "Query", "Position", "CTR", "Clicks" e "Impressions".</p>
                             <div class="dropzone-loaded-indicator hidden">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2">
